[package]
authors      = ["Tony <repositony@outlook.com>"]
description  = "Turn a FISPACT step into a monte-carlo source"
edition      = "2021"
keywords     = ["decay", "fispact", "iaea", "mcnp", "sdef"]
license      = "GPL-3.0 license"
name         = "fisdef"
readme       = "readme.md"
repository   = "https://github.com/repositony/"
rust-version = "1.81"
version      = "1.0.0"


[dependencies]
# core library, currently private
ntools = { git = "ssh://git@github.com/repositony/ntools.git", branch = "main", features = [
    "fispact",
    "iaea",
] }

# external
anyhow     = "1.0.94"
clap       = { version = "4.5", features = ["derive", "wrap_help"] }
log        = "0.4.22"
serde      = "1.0.217"
serde_json = "1.0"
stderrlog  = "0.6.0"
textwrap   = "0.16.1"

[lints.rust]
unsafe_code = "forbid"

[[bin]]
doc  = false
name = "fisdef"
