[package]
authors      = ["Tony <repositony@outlook.com>"]
description  = "Turn a FISPACT step into a monte-carlo source"
edition      = "2021"
keywords     = ["decay", "fispact", "iaea", "mcnp", "sdef"]
license      = "GPL-3.0 license"
name         = "fisdef"
readme       = "readme.md"
repository   = "https://github.com/repositony/fisdef"
rust-version = "1.81"
version      = "1.0.1"


[dependencies]
# core library, not currently for public use
ntools = { git = "ssh://git@github.com/repositony/ntools.git", branch = "main", features = [
    "fispact",
    "iaea",
] }

# external
anyhow     = "1.0.97"
clap       = { version = "4.5.31", features = ["derive", "wrap_help"] }
log        = "0.4.26"
serde      = "1.0.218"
serde_json = "1.0.140"
stderrlog  = "0.6.0"
textwrap   = "0.16.2"

[lints.rust]
unsafe_code = "forbid"

[[bin]]
doc  = false
name = "fisdef"

[profile.dist]
allow-dirty = ["ci", "msi"]
inherits    = "release"
lto         = "thin"
