[package]
  name         = "fisdef"
  version      = "1.0.2"
  edition      = "2021"
  rust-version = "1.81"
  description  = "Turn a FISPACT step into a monte-carlo source"
  readme       = "readme.md"
  repository   = "https://github.com/repositony/fisdef"
  license      = "GPL-3.0 license"
  keywords     = ["decay", "fispact", "iaea", "mcnp", "sdef"]

[[bin]]
  doc  = false
  name = "fisdef"

[dependencies]
  # core library, not currently for public use
  ntools = { git = "ssh://git@github.com/repositony/ntools.git", branch = "main", features = [
    "fispact",
    "iaea",
  ] }

  # external
  anyhow     = "1.0.97"
  clap       = { version = "4.5.31", features = ["derive", "wrap_help"] }
  log        = "0.4.26"
  serde      = "1.0.218"
  serde_json = "1.0.140"
  stderrlog  = "0.6.0"
  textwrap   = "0.16.2"

[lints.rust]
  unsafe_code = "forbid"

[profile.dist]
  inherits    = "release"
  lto         = "thin"
  allow-dirty = ["ci", "msi"]
